Removed wlogout, added wofi power menu

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -12,13 +12,15 @@ bind = $mod, F, exec, nemo
 # Restart Hyprland
 bind = $mod SHIFT, R, exec, hyprctl reload
 # Close/Quit Hyprland
-bind = SUPER_SHIFT, Q, exit
-# Restart Waybar
-bind = SUPER, W, exec, killall waybar; exec, waybar
+bind = $mod SHIFT, Q, exit
 # Close active window
 bind = $mod, Q, killactive
+# Restart Waybar
+bind = $mod SHIFT, W, exec, killall waybar; waybar
 # Lock screen
-bind = SUPER, L, exec, hyprlock
+bind = $mod, L, exec, hyprlock
+# Power menu
+bind = $mod, P, exec, ~/.config/waybar/scripts/power-menu.sh
 # Change focus
 bind = $mod, LEFT, movefocus, l
 bind = $mod, RIGHT, movefocus, r
@@ -48,12 +50,6 @@ bind = SUPER, mouse_down, workspace, e+1
 bind = SUPER, mouse_up, workspace, e-1
 # Toggle windows floating mode
 bind = $mod, SPACE, togglefloating
-# Restart Hyprland
-bind = $mod SHIFT, R, exec, hyprctl reload
-# Close/Quit Hyprland
-bind = $mod SHIFT, Q, exit
-# Restart Waybar
-bind = $mod SHIFT, W, exec, killall waybar; waybar
 # Move/resize with Super + mouse
 bindm = SUPER, mouse:272, movewindow    # left mouse
 bindm = SUPER, mouse:273, resizewindow  # right mouse
@@ -66,8 +62,8 @@ bind = SUPER CTRL, DOWN, resizeactive, 0 20    # grow down
 bind = SUPER, D, exec, wofi --show drun --prompt "Search" --width 400 --allow-images
 
 # ---Hyprland settings---
-monitor = HDMI-A-1,1920x1080@60,0x0,1
-#monitor = eDP-1,1920x1080@60,0x0,1   # for laptop
+monitor = eDP-1, 1920x1080@60, 0x0, 1
+monitor = eDP-1, addreserved, 30, 0, 0, 0
 # Set keyboard
 input {
     kb_layout = hu
