--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -1,5 +1,5 @@
 {
-  "layer": "top",
+  "layer": "bottom",
   "position": "top",
   "height": 30,
   "modules-left": ["hyprland/workspaces"],
@@ -60,12 +60,12 @@
   "custom/power": {
     "format": "",
     "tooltip": false,
-    "on-click": "wlogout --layout ~/.config/wlogout/layout --css ~/.config/wlogout/style.css"
+    "on-click": "~/.config/waybar/scripts/power-menu.sh"
 },
 
 "custom/weather": {
   "exec": "~/.config/waybar/scripts/weather.sh",
-  "interval": 600,
+  "interval": 900,
   "format": "{}"
 },
 
