remove weather, add clipboard

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,11 +1,11 @@
 # ---Autostart programs---
 exec-once = waybar
 exec-once = hyprpaper
-exec-once = numlockx on
 exec-once = systemctl --user start hyprpolkitagent
+exec-once = wl-paste --watch cliphist store
 
 # ---Keybindings---
-$mod = SUPER
+$mod = SUPER # Define the mod key
 bind = $mod, Return, exec, kitty
 bind = $mod, B, exec, firefox
 bind = $mod, F, exec, nemo
@@ -21,6 +21,10 @@ bind = $mod SHIFT, W, exec, killall waybar; waybar
 bind = $mod, L, exec, hyprlock
 # Power menu
 bind = $mod, P, exec, ~/.config/waybar/scripts/power-menu.sh
+# Take screenshot
+bind = $mod, PRINT, exec, hyprshot -m region -o ~/Pictures -c # SUPER+Print Screen
+# Clipboard history
+bind = SUPER, V, exec, ~/.config/hypr/clipboard.sh
 # Change focus
 bind = $mod, LEFT, movefocus, l
 bind = $mod, RIGHT, movefocus, r
@@ -80,6 +84,8 @@ general {
     border_size = 1
     col.active_border = rgba(FF7A00FF)
     col.inactive_border = rgba(33333388)
+    gaps_in = 5        # space between windows
+    gaps_out = 10      # space between windows and screen edge
 }
 decoration {
     rounding = 0
@@ -96,6 +102,4 @@ env = QT_QPA_PLATFORM,wayland
 env = QT_QPA_PLATFORMTHEME,qt5ct
 env = QT_STYLE_OVERRIDE,Kvantum
 env = QT_QPA_PLATFORMTHEME,qt6ct
-# Wlogout
-windowrulev2 = float, title:^(wlogout)$
-windowrulev2 = center, title:^(wlogout)$
+
