--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -11,7 +11,7 @@ adjust_column_width 0
 
 # ===== COLORS (simple dark) =====
 background         #141414
-foreground         #cdd6f4
+foreground         #d1d1d1
 
 cursor             #f5e0dc
 cursor_text_color  #363636
