open google calendar by clicking on clock

--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -27,6 +27,7 @@
 
   "clock": {
     "format": "  {:%H:%M  %d.%m.%Y}",
+    "on-click": "xdg-open https://calendar.google.com",
     "tooltip": false
   },
 
