--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -63,7 +63,7 @@ bind = SUPER CTRL, RIGHT, resizeactive, 20 0    # grow right
 bind = SUPER CTRL, UP, resizeactive, 0 -20   # shrink up
 bind = SUPER CTRL, DOWN, resizeactive, 0 20    # grow down
 # Wofi
-bind = SUPER, D, exec, wofi --show drun --prompt "Search" --width 400 --allow-images
+bind = SUPER, D, exec, wofi --show drun --prompt "Search" --width 400 --allow-images --style ~/.config/wofi/menu.css
 
 # ---Hyprland settings---
 monitor = eDP-1, 1920x1080@60, 0x0, 1
