App menu, Colorize network, audio icons if disconneted or muted.

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -6,6 +6,7 @@ exec-once = wl-paste --watch cliphist store
 
 # ---Keybindings---
 $mod = SUPER # Define the mod key
+# Open apps
 bind = $mod, Return, exec, kitty
 bind = $mod, B, exec, firefox
 bind = $mod, F, exec, nemo
@@ -97,6 +98,11 @@ animations {
     animation = fade,       1, 1.8, default
     animation = workspaces, 1, 2.5,   default
 }
+# Make apps float
+windowrule = float, class:^(org.gnome.Calculator)$
+windowrule = center, class:^(org.gnome.Calculator)$
+#windowrule = size 250 160, class:^(org.gnome.Calculator)$
+
 # QT appearance
 env = QT_QPA_PLATFORM,wayland
 env = QT_QPA_PLATFORMTHEME,qt5ct
