make waybar more friendly, cpu mem opens htop

--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -26,7 +26,7 @@ label {
     monitor =
 
     text = cmd[update:1000] date +"%H:%M"
-    font_family = JetBrainsMono Nerd Font
+    font_family = JetBrainsMono
     font_size = 110
     color = rgba(255, 255, 255, 1.0)
 
@@ -43,7 +43,7 @@ label {
     monitor =
 
     text = cmd[update:60000] date +"%A, %Y-%m-%d"
-    font_family = JetBrainsMono Nerd Font
+    font_family = JetBrainsMono
     font_size = 24
     color = rgba(220, 220, 220, 0.9)
 
@@ -87,7 +87,7 @@ label {
     monitor =
 
     text = $FAIL  # built-in hyprlock variable
-    font_family = JetBrainsMono Nerd Font
+    font_family = JetBrainsMono
     font_size = 14
     color = rgba(255, 120, 120, 0.95)
 
@@ -101,7 +101,7 @@ label {
     monitor =
 
     text = cmd[update:5000] echo "$(uname -r) · $(lsb_release -ds 2>/dev/null || echo Arch Linux)"
-    font_family = JetBrainsMono Nerd Font
+    font_family = JetBrainsMono
     font_size = 12
     color = rgba(200, 200, 200, 0.6)
 
