--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -26,7 +26,7 @@
   },
 
   "clock": {
-    "format": "  {:%H:%M  %d.%m.%Y}",
+    "format": " {:%H:%M  %Y.%m.%d}",
     "on-click": "xdg-open https://calendar.google.com",
     "tooltip": true,
     "tooltip-format": "Open Google Calendar"
@@ -62,11 +62,25 @@
     "format-charging": "{capacity}% "
   },
 
-  "cpu": { "format": " {usage}%" },
+  "cpu": { 
+  "format": " {usage}%", 
+  "tooltip": true,
+  "tooltip-format": "",
+  "on-click": "kitty -e htop -s PERCENT_CPU",
+    "states": {
+    "warning": 60,
+    "critical": 90
+    }
+  },
   "memory": { 
     "format": " {used}GB", 
     "tooltip": true,
-    "tooltip-format": "{used}GB of {total}GB"
+    "tooltip-format": "{used}GB of {total}GB",
+    "on-click": "kitty -e htop -s M_RESIDENT",
+     "states": {
+     "warning": 50,
+     "critical": 80
+     }
   },
 
   "custom/arch-menu": {
