--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,5 +1,5 @@
 # ===== FONT =====
-font_family      JetBrainsMono Nerd Font
+font_family      JetBrainsMono
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
