--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -65,6 +65,9 @@ bind = SUPER CTRL, UP, resizeactive, 0 -20   # shrink up
 bind = SUPER CTRL, DOWN, resizeactive, 0 20    # grow down
 # Wofi
 bind = SUPER, D, exec, wofi --show drun --prompt "Search" --width 400 --allow-images --style ~/.config/wofi/menu.css
+# Show keybindings
+bind = SUPER, F1, exec, firefox ~/.config/hypr/keybindings-help.html
+
 
 # ---Hyprland settings---
 monitor = eDP-1, 1920x1080@60, 0x0, 1
