enabled dwindle layout for grid view

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -85,11 +85,18 @@ cursor {
 # Appearance
 }
 general {
+    layout = dwindle
     border_size = 1
     col.active_border = rgba(FF7A00FF)
     col.inactive_border = rgba(33333388)
     gaps_in = 5        # space between windows
     gaps_out = 10      # space between windows and screen edge
+}
+dwindle {
+    preserve_split = true        # keeps your split directions when resizing
+    smart_resizing = true        # resizes only the window you're dragging
+    smart_split = true           # ⭐ enables drag-to-top/bottom/left/right splits
+    special_scale_factor = 1.0   # optional, default scale for special workspace
 }
 decoration {
     rounding = 0
