Added nvidia settings

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -118,4 +118,16 @@ env = QT_QPA_PLATFORM,wayland
 env = QT_QPA_PLATFORMTHEME,qt5ct
 env = QT_STYLE_OVERRIDE,Kvantum
 env = QT_QPA_PLATFORMTHEME,qt6ct
+# NVIDIA fixes
+env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+env = LIBVA_DRIVER_NAME,nvidia
+env = XDG_SESSION_TYPE,wayland
+env = GBM_BACKEND,nvidia-drm
+render = explicit_sync
+# If there is flickering or black windows
+force_no_directscanout = true
+# Multimonitor fixes for nvidia
+# env = WLR_DRM_NO_MODIFIERS,1
+# For tearing
+# env = __GL_SYNC_TO_VBLANK,1
 
