Stylized app search, Clipboard, Power menu

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -64,7 +64,7 @@ bind = SUPER CTRL, RIGHT, resizeactive, 20 0    # grow right
 bind = SUPER CTRL, UP, resizeactive, 0 -20   # shrink up
 bind = SUPER CTRL, DOWN, resizeactive, 0 20    # grow down
 # Wofi
-bind = SUPER, D, exec, wofi --show drun --prompt "Search" --width 400 --allow-images --style ~/.config/wofi/menu.css
+bind = SUPER, A, exec, wofi --show drun -a --prompt "Search" --width 400 --allow-images --style ~/.config/wofi/menu.css
 # Show keybindings
 bind = SUPER, F1, exec, firefox ~/.config/hypr/keybindings-help.html
 
