added copyq, hypridle

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -2,7 +2,10 @@
 exec-once = waybar
 exec-once = hyprpaper
 exec-once = systemctl --user start hyprpolkitagent
-exec-once = wl-paste --watch cliphist store
+exec-once = copyq --start-server
+# For GTK4 (uses GNOME settings)
+exec-once = gsettings set org.gnome.desktop.interface color-scheme 'prefer-dark'
+exec-once = gsettings set org.gnome.desktop.interface gtk-theme "Adwaita-dark" # e.g., Adwaita-dark
 
 # ---Keybindings---
 $mod = SUPER # Define the mod key
@@ -21,11 +24,11 @@ bind = $mod SHIFT, W, exec, killall waybar; waybar
 # Lock screen
 bind = $mod, L, exec, hyprlock
 # Power menu
-bind = $mod, P, exec, ~/.config/waybar/scripts/power-menu.sh
+bind = $mod, P, exec, ~/.config/waybar/power-menu.sh
 # Take screenshot
 bind = $mod, PRINT, exec, hyprshot -m region -o ~/Pictures -c # SUPER+Print Screen
 # Clipboard history
-bind = SUPER, V, exec, ~/.config/hypr/clipboard.sh
+bind = SUPER, V, exec, copyq toggle
 # Change focus
 bind = $mod, LEFT, movefocus, l
 bind = $mod, RIGHT, movefocus, r
@@ -63,11 +66,10 @@ bind = SUPER CTRL, LEFT, resizeactive, -20 0   # shrink left
 bind = SUPER CTRL, RIGHT, resizeactive, 20 0    # grow right
 bind = SUPER CTRL, UP, resizeactive, 0 -20   # shrink up
 bind = SUPER CTRL, DOWN, resizeactive, 0 20    # grow down
-# Wofi
-bind = SUPER, A, exec, wofi --show drun -a --prompt "Search" --width 400 --allow-images --style ~/.config/wofi/menu.css
+# Wofi App search menu
+bind = SUPER, A, exec, wofi --show drun --allow-images --prompt "Search..." --width 400 --height 450 --style ~/.config/waybar/app-menu.css
 # Show keybindings
 bind = SUPER, F1, exec, firefox ~/.config/hypr/keybindings-help.html
-
 
 # ---Hyprland settings---
 monitor = eDP-1, 1920x1080@60, 0x0, 1
@@ -77,6 +79,7 @@ input {
     kb_layout = hu
     kb_variant =
     kb_options = grp:alt_shift_toggle
+    follow_mouse = 0 
 }
 # Fix cursor flickering
 cursor {
@@ -85,39 +88,54 @@ cursor {
 # Appearance
 }
 general {
-    layout = dwindle
+    layout = master
     border_size = 1
     col.active_border = rgba(FF7A00FF)
     col.inactive_border = rgba(33333388)
     gaps_in = 5        # space between windows
     gaps_out = 10      # space between windows and screen edge
 }
+
 dwindle {
     preserve_split = true        # keeps your split directions when resizing
     smart_resizing = true        # resizes only the window you're dragging
-    smart_split = true           # ⭐ enables drag-to-top/bottom/left/right splits
+    smart_split = true           # enables drag-to-top/bottom/left/right splits
     special_scale_factor = 1.0   # optional, default scale for special workspace
 }
 decoration {
-    rounding = 0
+    rounding = 10
 }
 animations {
-    enabled = yes
-    animation = windows,    1, 1.8, default
-    animation = border,     1, 1.4, default
-    animation = fade,       1, 1.8, default
-    animation = workspaces, 1, 2.5,   default
+  enabled = yes
+  bezier = easeOut, 0.16, 1, 0.3, 1
+  bezier = easeInOut, 0.65, 0, 0.35, 1
+  animation = windows,    1, 3, easeOut, popin 80%
+  animation = border,     1, 2, easeOut
+  animation = fade,       1, 3, easeInOut
+  animation = workspaces, 1, 3, easeInOut, slide
 }
+
 # Make apps float
 windowrule = float, class:^(org.gnome.Calculator)$
 windowrule = center, class:^(org.gnome.Calculator)$
 #windowrule = size 250 160, class:^(org.gnome.Calculator)$
+# CopyQ main window
+windowrulev2 = float, title:^(CopyQ.*|.*CopyQ.*)$
+windowrulev2 = size 600 800, title:^(CopyQ.*|.*CopyQ.*)$
+windowrulev2 = center, title:^(CopyQ.*|.*CopyQ.*)$
+windowrulev2 = stayfocused, title:^(CopyQ.*|.*CopyQ.*)$
 
 # QT appearance
 env = QT_QPA_PLATFORM,wayland
 env = QT_QPA_PLATFORMTHEME,qt5ct
 env = QT_STYLE_OVERRIDE,Kvantum
 env = QT_QPA_PLATFORMTHEME,qt6ct
+# GTK appearance
+env = GTK_THEME,Adwaita-dark
+env = GTK_APPLICATION_PREFER_DARK_THEME,1
+env = GDK_BACKEND,wayland
+# For GTK3 (using environment variable)
+env = GTK_THEME,Adwaita:dark # e.g., GTK_THEME=Adwaita:dark
 # NVIDIA fixes
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 env = LIBVA_DRIVER_NAME,nvidia
@@ -130,4 +148,3 @@ force_no_directscanout = true
 # env = WLR_DRM_NO_MODIFIERS,1
 # For tearing
 # env = __GL_SYNC_TO_VBLANK,1
-
