--- a/.config/gtk-4.0/settings.ini
+++ b/.config/gtk-4.0/settings.ini
@@ -1,5 +1,5 @@
 [Settings]
-gtk-theme-name=Adwaita
+gtk-theme-name=Adwaita-dark
 gtk-icon-theme-name=Adwaita
 gtk-font-name=Adwaita Sans 9
 gtk-cursor-theme-name=default
